Preload all numbers + fix falling presents sticking out

--- a/src/client/app/home/home/home.component.scss
+++ b/src/client/app/home/home/home.component.scss
@@ -32,7 +32,7 @@
 		justify-content: space-around;
 
 		img {
-			top: -15%;
+			top: -20%;
 			height: 12%;
 			position: relative;
 			outline: none;
@@ -66,7 +66,7 @@
 		@keyframes falling {
 			0% {
 				transform: rotate(0deg);
-				top: -15%;
+				top: -20%;
 			}
 
 			100% {
@@ -78,7 +78,7 @@
 		@keyframes falling2 {
 			0% {
 				transform: rotate(90deg);
-				top: -15%;
+				top: -20%;
 			}
 
 			100% {
@@ -90,7 +90,7 @@
 		@keyframes falling3 {
 			0% {
 				transform: rotate(-20deg);
-				top: -15%;
+				top: -20%;
 			}
 
 			100% {
